# Trading-Crypto

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: config.toml
doc/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  SECURITY.md
src/: Cargo.toml  debug_positions.py  main.py  main.rs
src/config/: mod.rs
src/connectors/: __init__.py  exchange_service.py  websocket.rs
src/database/: database.py
src/execution_service/: __init__.py  manager.py
src/execution_service/monitoring/: __init__.py  position_monitor.py
src/execution_service/persistence/: __init__.py  position_storage.py
src/execution_service/risk/: __init__.py  daily_loss_tracker.py  portfolio_tracker.py
src/execution_service/utils/: __init__.py  trade_calculations.py
src/screener/: __init__.py  screener.py
src/strategy/OFI/: data.rs  engine.rs  ofi.rs  signals.rs  wrapper.py
src/test/: __init__.py  test_daily_loss_tracker.py  test_daily_loss_tracker_logic.py  test_daily_loss_tracker_reset_logic.py  test_final_verification.py  test_position_checking.py  test_position_fix_verification.py
src/utils/: lib.rs  market_analyzer.py  position_monitor.rs  telegram.py
