[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "Trading-Crypto"
version = "0.1.6"
authors = [
  { name="RaihanZxx", email="raihanzxzy@gmail.com" },
]
description = "Tools for Crypto Algorithm."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Crypto :: Financial :: Investment",
    "Development Status :: 4 - Beta",
]

dependencies = [
    "requests",
    "python-dotenv",
    "toml"
]

[project.urls]
Homepage = "https://github.com/RaihanZxx/Trading-Crypto"
Issues = "https://github.com/RaihanZxx/Trading-Crypto/issues"

[project.scripts]
crypto = "src.main:main"

[tool.setuptools.packages.find]
where = ["src", "."]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"

[tool.ruff]
cache-dir = ".cache/ruff"

[tool.pyright]
cache-dir = ".cache/pyright"
venvPath = "."
venv = ".venv"

[tool.maturin]
bindings = "pyo3"
module-name = "ofi_engine_rust"
python-source = "src"